TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "137168701062400" [label="Start"];
  "137168701062400" -> "137168701062592";
  "137168701062592" [label="Code"];
  "137168701062592" -> "137168701134192";
  "137168701134192" [label="Function"];
  "137168701134192" -> "137168701131552";
  "137168701134192" -> "137168701130400";
  "137168701134192" -> "137168701134432";
  "137168701131552" [label="main IDENTIFIER"];
  "137168701130400" [label="Parameters"];
  "137168701134432" [label="Code"];
  "137168701134432" -> "137168701130640";
  "137168701134432" -> "137168701130016";
  "137168701134432" -> "137168701129968";
  "137168701130640" [label="Code"];
  "137168701130640" -> "137168701134048";
  "137168701134048" [label="Declaration"];
  "137168701134048" -> "137168701130112";
  "137168701134048" -> "137168701130592";
  "137168701130112" [label="x IDENTIFIER"];
  "137168701130592" [label="1 INT"];
  "137168701130016" [label="Code"];
  "137168701130016" -> "137168701129104";
  "137168701129104" [label="Declaration"];
  "137168701129104" -> "137168701132416";
  "137168701129104" -> "137168701135440";
  "137168701132416" [label="x IDENTIFIER"];
  "137168701135440" [label="2 INT"];
  "137168701129968" [label="Return"];
  "137168701129968" -> "137168701132224";
  "137168701132224" [label="0 INT"];
}
